# monitoring_agent

./: README.md  port-forward.sh  pyproject.toml  verify_setup.py
config/: etl.yaml
dashboard/: health_metrics.json
docs/: deployment-and-verification.md  etl_configuration_usage.md  etl_implementation_plan.md  etl_mvp_plan.md  etl_production_plan.md  implementation_plan.md  minikube-access-issues-and-solutions.md  minikube-ingress-issues.md  prerequisites.md  script-ecosystem.md  setup.md  simulator_plan.md
etl/: Dockerfile  docker-compose.yml  pipeline.py  transformer.py
load_generator/: generator.py
scripts/: cleanup.sh  deploy.sh  deploy_etl.py
src/etl/: README.md  __init__.py  extractor.py  loader.py
src/self_healing_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test-application/: deploy.sh  verify.sh
test-application/backend/: Dockerfile  app.py  requirements.txt
test-application/frontend/: Dockerfile  app.py  requirements.txt
test-application/kubernetes/: frontend-deployment.yaml  frontend-service.yaml  ingress.yaml
test-application/kubernetes/configmaps/: grafana-configmap.yaml  grafana-dashboard-configmap.yaml  prometheus-configmap.yaml
test-application/kubernetes/deployments/: backend-deployment.yaml  grafana-deployment.yaml  prometheus-deployment.yaml
test-application/kubernetes/services/: backend-service.yaml  frontend-service.yaml  grafana-service.yaml  prometheus-service.yaml
tests/: test_etl.py
