[project]
name = "self-healing-system"
version = "0.1.0"
description = "AI-Powered Self-Healing Kubernetes System"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "prometheus-client>=0.17.0",
    "kafka-python>=2.0.0",
    "minio>=7.0.0",
    "ray[rllib]>=2.8.0",
    "stable-baselines3>=2.0.0",
    "chaos-mesh>=1.2.13",
    "kubernetes>=25.0.0",
    "locust>=2.0.0",
    # ETL Pipeline Dependencies
    "requests>=2.31.0",
    "influxdb-client>=1.38.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]